k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ml-service
  labels:
    app: ml-service
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: ml-service
